# open-cot

./: LICENSE  README.md  main.py  pyproject.toml
src/open_cot/: __init__.py  constants.py  downloader.py  models.py  parser.py
