[project]
name = "open-cot"
version = "0.1.0"
description = "Fast, async interface for U.S. CFTC Commitment of Traders data"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "httpx>=0.28.1",
    "polars>=1.38.1",
    "pydantic>=2.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_cot"]
